bump versions: spring, kafka, adjust code to breaking changes